# Valorant_CLI

./: .env.example  .gitignore  AGENTS.md  BUILD_PLAN.md  Makefile  README.md  alembic.ini  pitch_doc.md  pyproject.toml  scratch.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260418_67ef1fbd8424_initial_schema.py  20260418_9edf9a0a8f87_string_timestamps_rounds_in_spawn.py  20260421_a1b2c3d4e5f6_planter_puuid_economy.py  20260427_3d2d3a1122f4_add_meta_cache_and_patch_versions.py  20260504_b7c4d9e2a3f1_kills_round_index_and_team_checks.py  20260505_c1d2e3f4a5b6_add_round_players_table.py  20260505_d4e5f6a7b8c9_add_mmr_history_table.py  20260505_e5f6a7b8c9d0_add_coaching_sessions_and_notes.py  20260515_a1b2c3d4e5f7_add_spatial_columns_kills_rounds.py  20260515_b2c3d4e5f6a8_add_ability_casts_and_damage_events.py  20260515_f1e2d3c4b5a6_add_match_context_json_to_coaching_sessions.py
corpus/agents/: Astra.md  Breach.md  Brimstone.md  Chamber.md  Clove.md  Cypher.md  Deadlock.md  Fade.md  Gekko.md  Harbor.md  Iso.md  Jett.md  KAY-O.md  Killjoy.md  Miks.md  Neon.md  Omen.md  Phoenix.md  Raze.md  Reyna.md  Sage.md  Skye.md  Sova.md  Tejo.md  Veto.md  Viper.md  Vyse.md  Waylay.md  Yoru.md
corpus/concepts/: economy.md  executes.md  fundamentals.md  retakes.md  roles.md
corpus/maps/: Abyss.md  Ascent.md  Bind.md  Breeze.md  Corrode.md  Fracture.md  Haven.md  Icebox.md  Lotus.md  Pearl.md  Split.md  Sunset.md
docs/: CLI_GUIDE.md  REVIEW.md  WALKTHROUGH.md  youtube-channels.md
docs/architecture/: ARCHITECTURE.md
docs/reviews/: FINDINGS_2026-05-03.md  PROJECT_REVIEW_2026-05-03.md  VERIFICATION_2026-05-03.md
scripts/: build_corpus.py  eval_meta.py  eval_post_game.py  run_eval.py  run_ragas_eval.py  validate_api.py  validate_api_data.py
src/valocoach/: __main__.py
src/valocoach/cli/: app.py  display.py  formatter.py  hub.py  interactive.py
src/valocoach/cli/commands/: agents_refresh.py  coach.py  ingest.py  interactive.py  lineup.py  meta.py  meta_refresh.py  notes.py  patch.py  post_game.py  profile.py  sessions.py  stats.py
src/valocoach/coach/: __init__.py  context.py  elicitation.py  intent.py  match_context.py  meta_response.py  sanitizer.py  session_manager.py  staleness.py  stats_sanitizer.py  templates.py
src/valocoach/core/: config.py  context_budget.py  exceptions.py  memory.py  models.py  parser.py  preflight.py  session_store.py
src/valocoach/data/: __init__.py  api_client.py  api_models.py  database.py  henrik_client.py  loader.py  mapper.py  models.py  orm_models.py  repository.py  sync.py
src/valocoach/llm/: coach.py  prompts.py  provider.py
src/valocoach/retrieval/: __init__.py  agents.py  cache.py  chunker.py  embedder.py  ingester.py  lineups.py  maps.py  meta.py  meta_generator.py  meta_sync.py  patch_diff.py  patch_tracker.py  retriever.py  scraper.py  searcher.py  vector_store.py  web_ingest.py  youtube_ingest.py
src/valocoach/retrieval/data/: agents.json  lineups_seed.json  maps.json  meta.json
src/valocoach/retrieval/scrapers/: __init__.py  meta_stats.py  patch_notes.py  tavily_client.py  web.py  youtube.py
src/valocoach/stats/: __init__.py  analyzer.py  baseline.py  calculator.py  constants.py  filters.py  formatters.py  post_game.py  round_analyzer.py  zones.py
tests/: conftest.py  test_agents.py  test_agents_refresh.py  test_api_models_properties.py  test_baseline.py  test_chunker_branches.py  test_cli.py  test_cli_integration.py  test_coach_context.py  test_completion.py  test_config.py  test_context_budget.py  test_data_models.py  test_database.py  test_database_ensure.py  test_display.py  test_embedder.py  test_filters.py  test_formatter.py  test_formatter_coaching.py  test_golden_stats.py  test_henrik_client.py  test_ingest_progress.py  test_intent_classifier.py  test_interactive.py  test_lineups.py  test_live_coach.py  test_loader.py  test_mapper.py  test_maps.py  test_memory.py  test_meta_command.py  test_meta_generator.py  test_meta_refresh.py  test_meta_response.py  test_meta_sync.py  test_notes_command.py  test_parser.py  test_patch_command.py  test_patch_tracker.py  (+19 more)
tests/eval/: meta_reference.yaml  post_game_cases.yaml  ragas_samples.yaml  scenarios.yaml  test_eval_harness.py  test_ragas_setup.py
