[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "valocoach"
version = "0.1.0"
description = "CLI-based Valorant tactical coaching assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Typer is the locked CLI framework from AGENTS.md / BUILD_PLAN.md.
    "typer==0.16.0",
    # Rich handles all terminal formatting and live markdown streaming.
    "rich==14.0.0",
    # prompt_toolkit powers the interactive REPL mode.
    "prompt-toolkit==3.0.47",
    # Pydantic is required for cross-module models and settings.
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    # Async HTTP is the standard I/O layer across the project.
    "httpx==0.27.2",
    # LiteLLM preserves the single config-line provider swap to Claude later.
    "litellm==1.82.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
]

[project.scripts]
valocoach = "valocoach.cli.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
