[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valocoach"
version = "0.1.0"
description = "Valorant tactical coaching CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
valocoach = "valocoach.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/valocoach"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
